--- a/examples/chart/access/mattermost/Chart.yaml
+++ b/examples/chart/access/mattermost/Chart.yaml
@@ -1,4 +1,4 @@
-.version: &version "18.0.2-dev.jsonpath.1"
+.version: &version "18.0.2-dev.jsonpath.1-relay.3"
 
 apiVersion: v2
 name: teleport-plugin-mattermost
