Add e/lib/idp/saml/testenv to known test packages depguard rule (#56997)
This is required to allow the test package to import other test
packages from the OSS repo.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -150,6 +150,7 @@ linters:
             - '!**/e/lib/aws/identitycenter/test/**'
             - '!**/e/lib/devicetrust/testenv/**'
             - '!**/e/lib/jamf/testenv/**'
+            - '!**/e/lib/idp/saml/testenv/**'
             - '!**/e/lib/operatortest/**'
             - '!**/e/tests/**'
             - '!**/integration/helpers/**'
