Add Vale to the Lint (Docs) workflow
Install and run Vale in the Lint (Docs) workflow in order to ensure that
the documentation has a consistent style. This approach downloads a
release from the Vale GitHub repository, extracts a precompiled binary,
and runs it on all docs files. It assumes that all Vale warnings and
errors are already resolved, so that any new ones would have been
introduced by the target pull request.

This is an alternative to using reviewdog, which was behind a security
incident (see #53162 for context). While reviewdog can inspect the diff
introduced by a PR and limit its checks to changed lines, this change
does not require reliance on an insecure dependency.

--- a/.github/workflows/doc-tests.yaml
+++ b/.github/workflows/doc-tests.yaml
@@ -142,6 +142,26 @@ jobs:
         working-directory: 'docs'
         run: yarn markdown-lint
 
+      - name: Check out vale
+        uses: actions/checkout@v4
+        with:
+          repository: 'errata-ai/vale'
+          path: 'vale'
+
+      - name: Download vale
+        working-directory: 'vale'
+        env: 
+          GH_TOKEN: ${{ github.token }}
+          VALE_VERSION: 3.12.0
+        run: |
+          gh release download v${VALE_VERSION} --pattern="*Linux_64-bit*"
+          tar -xvf vale_${VALE_VERSION}_Linux_64-bit.tar.gz
+
+      - name: Check docs style
+        working-directory: 'docs/content/current'
+        run:
+          ${GITHUB_WORKSPACE}/vale/vale --config docs/.vale.ini docs/pages
+
       - name: Test the docs build
         working-directory: docs
         run: yarn build
