--- a/.golangci.yml
+++ b/.golangci.yml
@@ -163,6 +163,8 @@ linters:
               desc: use "github.com/gravitational/teleport/lib/msgraph" instead
             - pkg: github.com/cloudflare/cfssl
               desc: use "crypto" or "x/crypto" instead
+            - pkg: "golang.org/x/net/context"
+              desc: use "context" instead
         oidc:
           deny:
             - pkg: github.com/coreos/go-oidc
