--- a/docs/config.json
+++ b/docs/config.json
@@ -736,6 +736,11 @@
       "permanent": true
     },
     {
+      "source": "/machine-workload-identity/machine-id/deployment/bound-keypair/",
+      "destination": "/reference/machine-id/bound-keypair/getting-started/",
+      "permanent": true
+    },
+    {
       "source": "/enroll-resources/workload-identity/",
       "destination": "/machine-workload-identity/workload-identity/",
       "permanent": true
