--- a/examples/chart/access/pagerduty/Chart.yaml
+++ b/examples/chart/access/pagerduty/Chart.yaml
@@ -1,4 +1,4 @@
-.version: &version "18.1.2-dev.relay.2"
+.version: &version "18.1.2-dev.jsonpath.2.relay.2"
 
 apiVersion: v2
 name: teleport-plugin-pagerduty
